# fast_zero_sync

./: .coverage  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 9de28a255ce0_exercicio_02_aula_04.py  d7e8a8163e75_create_users_table.py
src/fast_zero/: app.py  database.py  models.py  schemas.py  security.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
